--- a/restaurant-be/src/main/resources/application-local.yaml
+++ b/restaurant-be/src/main/resources/application-local.yaml
@@ -4,4 +4,4 @@ spring:
             host: localhost
             port: 27017
             username: cycycykwong
-            password: Green2o21
+            password: GoodMorning
