implement mutations and include restaurant info in dishes

--- a/dish-be/src/main/resources/application-local.yaml
+++ b/dish-be/src/main/resources/application-local.yaml
@@ -1,7 +1,7 @@
 spring:
     data:
         mongodb:
-            host: localhost
-            port: 27017
             username: cycycykwong
             password: GoodMorning
+            database: dish_demo_db
+            authentication-database: admin
