--- a/graphql-federation-gateway/package.json
+++ b/graphql-federation-gateway/package.json
@@ -13,9 +13,7 @@
     "@apollo/gateway": "^2.0.5",
     "apollo-server": "^3.9.0",
     "dotenv": "^16.0.1",
-    "graphql": "^16.5.0"
-  },
-  "devDependencies": {
+    "graphql": "^16.5.0",
     "typescript": "^4.7.4"
   }
 }
